# PythonOnlineShop

./: .gitignore  README.md
Projektbericht/: 00_Frontmatter.md  01_Einleitung_und_Anforderungsanalyse.md  03_UI_Design_und_Datenmodell.md  (+24 more)
webshop-python/: DATABASE_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_DATABASE.md  README.md  pyproject.toml  requirements.txt
webshop-python/ProjektberichtLatex/: Projektbericht.tex  projektbericht1.tex
webshop-python/data/: app.db  webshop.db
webshop-python/data/csv/: orders.csv  products.csv  user_consents.csv  users.csv
webshop-python/data/logs/: audit_log.csv
webshop-python/src/: app.py  config.py
webshop-python/src/api/: __init__.py  checkout_routes.py  routes.py
webshop-python/src/data/: app.db
webshop-python/src/models/: __init__.py  order.py  product.py  user.py
webshop-python/src/services/: catalog.py  checkout.py
webshop-python/src/static/: style.css
webshop-python/src/storage/: __init__.py  csv_backend.py  hybrid_backend.py  init_database.py  migrate_csv_to_sqlite.py  sqlite_backend.py  verify_migration.py
webshop-python/src/templates/: admin_products.html  base.html  cart.html  checkout.html  confirmation.html  cookie_banner.html  dashboard.html  edit_product.html  gdpr_data_view.html  gdpr_rights.html  impressum.html  index.html  login.html  orders.html  preferences.html  privacy_policy.html  product_detail.html  profile_edit.html  register.html  terms_of_service.html
webshop-python/src/utils/: helpers.py  logging_service.py
webshop-python/tests/: test_catalog.py  test_storage.py
(+4 files in other folders)
