[tool.poetry]
name = "webshop-python"
version = "0.1.0"
description = "A simple webshop application with Python."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
pandas = "^1.3"
sqlite3 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"